fix section grid alignment

--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     gap: var(--size-gap-sm);
     
-    width: var(--size-section-width);
+    width: 100%;
     max-height: var(--size-section-height);
     
     background-color: var(--color-surface-base);
